# keysync

./: .gitignore  README.md  pyproject.toml
src/keysync/: __init__.py  __main__.py  k8s.py  main.py  models.py  ssh_keys.py  tui.py
tests/: test_k8s.py
